changed too much stuff, then added a "viewport" with a minimum width and solved all my problems.

--- a/style.css
+++ b/style.css
@@ -2,15 +2,63 @@ body {
     margin: 0;
     padding: 0;
     font-family: arial, sans-serif;
+    font-size: 13px;
+    background-color: #fff;
+    -webkit-appearance: none;
+    color: #222;
 }
 
+.viewport {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    min-height: 100%;
+    margin: 0 auto;
+    min-width: 980px;
+    display: block;
+}
+
+img {
+    display: block;
+    text-align: -webkit-center;
+    margin-top: 180px;
+    height: 150px;
+    width: 272px;
+    margin-bottom: 10px;
+}
+
+form {
+    width: 100%;
+    position: absolute;
+    top: 311px;
+}
+
+ul {
+    -webkit-appearance: none;
+    width: 200px
+}
+    
+
+a {
+    -webkit-appearance: none;
+    color: #222;
+    background-color: #fff;    
+    text-decoration: none;
+}
+    
+
 li {
-    display: inline;
+    display: inline-block;
+    line-height: 24px;
+    outline: none;
+    vertical-align: middle;
 }
 
 .logo {
+    position: relative;
     margin: 0 auto;
-    width: 400px
+    width: 272px;
+    height: 92;
 }
 
 .searchbar {
@@ -30,14 +78,16 @@ li {
     position: absolute;
     right: 0px;
     bottom: 0px;
-    width: 300px
 }
 
 .navbar {
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    width: 300px
+    padding-left: 30px;
+    padding-right: 30px;
+    position: relative;
+    text-align: right;
+    align-items: center;
+    float: right;
+    color: #000;
 }
 
 .thebuttons {
